# .sc1

./: .env.example  .gitignore  BOM_DATA_QUALITY_REPORT.md  CLEANUP_SUMMARY.md  CODEBASE_CLEANUP_FINAL_REPORT.md  CODEBASE_CLEANUP_PLAN.md  CODEBASE_CLEANUP_SUMMARY.md  COMPREHENSIVE_INTEGRATION_TASKLIST.md  COMPREHENSIVE_PROJECT_DOCUMENTATION.md  CSV_COLUMN_MAPPING.md  CSV_UPLOAD_FIX_SUMMARY.md  DATA_INTEGRATION_GUIDE.md  DATA_INTEGRATION_README.md  DEPLOYMENT_GUIDE.md  Dockerfile  PHASE1_COMPLETION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE_2_1_COMPLETION_SUMMARY.md  PHASE_2_3_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_CLEAN.md  PYTHON312_ENV_SETUP.md  PYTHON_313_COMPATIBILITY.md  README.md  SALES_INTEGRATION_DOCUMENTATION.md  ZEN_MCP_INTEGRATION_GUIDE.md  ZEN_MCP_SUCCESS.md  ZEN_MCP_VERIFICATION_COMPLETE.md  ZEN_MCP_VERIFICATION_SUMMARY.md  activate_py312.bat  activate_py312.ps1  ai.md  analysis_output.txt  analyze_sales_inventory.py  beverly_knits_data_integration.py  check_problematic_skus.py  compare_boms.py  create_corrected_bom.py  create_data_visualizations.py  data_integration_analysis.md  (+55 more)
automation/: README.md  dashboard.py  ml_improvement_example.py  report_summary.py  scheduler.py  simple_automation.py  zen_code_automation.py
config/: automation_config.json  scheduler_config.json  secure_config.py  settings.py  zen_code_config.json  zen_data_config.json  zen_mcp_config.json  zen_ml_config.json
data/: Inventory.csv  Sales Activity Report.csv  Style_BOM.csv  Yarn_Demand_2025-06-27_0442.csv  Yarn_ID.csv  Yarn_ID_1.csv  Yarn_ID_Current_Inventory.csv  cfab_Yarn_Demand_By_Style.csv  data_integration.py  data_quality_report.txt  data_quality_report_v2.txt  eFab_SO_List.csv  enhanced_real_data_loader.py  fix_remaining_boms.py  integrated_boms.csv  integrated_boms_v2.csv  integrated_boms_v2_backup.csv  integrated_boms_v2_backup_20250628_115127.csv  integrated_boms_v3_corrected.csv  integrated_inventory.csv  integrated_inventory_v2.csv  integrated_materials.csv  integrated_materials_v2.csv  integrated_supplier_master.csv  integrated_suppliers.csv  integrated_suppliers_v2.csv  integrated_yarn_master.csv  interchangeable_yarns.json  interchangeable_yarns_v2.json  real_data_integration_summary.csv  real_data_loader.py  real_data_sample_forecasts.csv  sales_data_processor.py  sample_boms.csv  sample_data_generator.py  sample_forecasts.csv  sample_inventory.csv  sample_suppliers.csv  yarn_demand_analysis.md
engine/: __init__.py  planner.py  sales_planning_integration.py  style_yarn_bom_integration.py
examples/: code_management_demo.py  ml_client_example.py
integrations/: inventory_integration.py  master_integration.py
models/: __init__.py  bom.py  forecast.py  inventory.py  recommendation.py  supplier.py  (+1 more)
(+72 files in other folders)
